--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,8 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+
+
         <!-- druid -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -89,13 +91,19 @@
             <version>1.1.10</version>
         </dependency>
 
+
+        <!--  DATASOURCE    -->
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>2.3.0</version>
         </dependency>
-
-
+        <!-- plugn -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
 
     </dependencies>
 
